--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-commerce Store</title>
+  <title>ShopEase</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    /* Slider styles */
     .slider {
       display: flex;
       transition: transform 0.7s ease-in-out;
@@ -13,18 +14,33 @@
     .slide {
       width: 100%;
       flex-shrink: 0;
+      position: relative;
+      height: 400px;
+    }
+    .slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .slide-text {
+      position: absolute;
+      top: 50%;
+      left: 10%;
+      transform: translateY(-50%);
+      color: white;
+      text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
     }
   </style>
 </head>
 <body class="bg-gray-100">
 
   <!-- Navbar -->
-  <nav class="bg-white shadow p-4 flex justify-between items-center relative">
+  <nav class="bg-white shadow p-4 flex justify-between items-center relative sticky top-0 z-50">
     <h1 class="text-2xl font-bold text-blue-600">ShopEase</h1>
 
     <!-- Links -->
     <div class="hidden md:flex space-x-6">
-      <a href="index.html" class="text-gray-700 hover:text-blue-600 font-medium">Home</a>
+      <a href="index.html" class="text-blue-600 font-bold">Home</a>
       <a href="shop.html" class="text-gray-700 hover:text-blue-600 font-medium">Shop</a>
       <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium">About</a>
       <a href="contact.html" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
@@ -50,13 +66,12 @@
     <!-- Search + Cart -->
     <div class="flex items-center space-x-2">
       <div class="hidden md:flex">
-        <input type="text" placeholder="Search..." class="px-3 py-2 rounded-l-lg border border-gray-300 focus:ring focus:ring-blue-200">
-        <button class="px-4 py-2 bg-blue-600 text-white rounded-r-lg hover:bg-blue-700">
+        <input id="searchInput" type="text" placeholder="Search..." class="px-3 py-2 rounded-l-lg border border-gray-300 focus:ring focus:ring-blue-200">
+        <button id="searchBtn" class="px-4 py-2 bg-blue-600 text-white rounded-r-lg hover:bg-blue-700">
           Search
         </button>
       </div>
       <button onclick="window.location.href='cart.html'" class="flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-        <!-- Professional Cart Icon -->
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
           <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5m1.6 8l-2 9m13-9l2 9M9 21a1 1 0 100-2 1 1 0 000 2zm8 0a1 1 0 100-2 1 1 0 000 2z" />
         </svg>
@@ -65,20 +80,54 @@
     </div>
   </nav>
 
-  <!-- Hero Banner Slider -->
-  <div class="relative w-full overflow-hidden h-96">
+  <!-- Hero Slider -->
+  <div id="heroSlider" class="relative w-full overflow-hidden h-96">
     <div id="slider" class="slider">
-      <img src="https://picsum.photos/id/1020/1200/400" class="slide object-cover" alt="Banner 4">
-      <img src="https://picsum.photos/id/1015/1200/400" class="slide object-cover" alt="Banner 1">
-      <img src="https://picsum.photos/id/1016/1200/400" class="slide object-cover" alt="Banner 2">
-      <img src="https://picsum.photos/id/1018/1200/400" class="slide object-cover" alt="Banner 3">
-      <img src="https://picsum.photos/id/1020/1200/400" class="slide object-cover" alt="Banner 4">
-      <img src="https://picsum.photos/id/1015/1200/400" class="slide object-cover" alt="Banner 1">
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1593642532400-2682810df593?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Smartphones">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">Latest Smartphones</h2>
+          <p class="text-lg mb-4">Grab the newest models at unbeatable prices!</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Laptops">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">High-End Laptops</h2>
+          <p class="text-lg mb-4">Powerful performance for work and gaming</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1593696120645-b1f3c37bb81f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Headphones">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">Stylish Headphones</h2>
+          <p class="text-lg mb-4">Experience immersive sound quality</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1523473827530-1228b6ed8d36?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Smartwatches">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">Smartwatches</h2>
+          <p class="text-lg mb-4">Track your fitness with style</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Featured Categories -->
-  <section class="max-w-7xl mx-auto p-6">
+  <section id="categoriesSection" class="max-w-7xl mx-auto p-6">
     <h2 class="text-2xl font-bold mb-6 text-gray-800">Featured Categories</h2>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
       <a href="smartphones.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
@@ -100,76 +149,10 @@
     </div>
   </section>
 
-  <!-- Best Selling Products -->
-  <section class="max-w-7xl mx-auto p-6">
-    <h2 class="text-2xl font-bold mb-6 text-gray-800">Best Selling Products</h2>
-    <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-      <!-- Product Card -->
-      <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
-        <a href="product.html">
-          <img src="https://picsum.photos/id/1011/400/300" alt="Smartphone" class="w-full h-56 object-contain">
-          <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">Smartphone</h3>
-        </a>
-        <p class="text-blue-600 font-bold mt-2">Rs 45,000</p>
-        <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-          Add to Cart
-        </button>
-      </div>
-
-      <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
-        <a href="product.html">
-          <img src="https://picsum.photos/id/1012/400/300" alt="Headphones" class="w-full h-56 object-contain">
-          <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">Headphones</h3>
-        </a>
-        <p class="text-blue-600 font-bold mt-2">Rs 5,000</p>
-        <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-          Add to Cart
-        </button>
-      </div>
-
-      <div class="bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center">
-        <a href="product.html">
-          <img src="https://picsum.photos/id/1019/400/300" alt="Smartwatch" class="w-full h-56 object-contain">
-          <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">Smartwatch</h3>
-        </a>
-        <p class="text-blue-600 font-bold mt-2">Rs 12,000</p>
-        <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
-          Add to Cart
-        </button>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Newsletter -->
-  <section class="bg-blue-600 py-10 mt-10">
-    <div class="max-w-3xl mx-auto text-center text-white">
-      <h2 class="text-2xl font-bold mb-4">Stay Updated!</h2>
-      <p class="mb-6">Subscribe to our newsletter and get the latest deals and offers.</p>
-      <div class="flex justify-center">
-        <input type="email" placeholder="Enter your email" class="px-4 py-2 rounded-l-lg w-64 border-none focus:ring focus:ring-blue-300">
-        <button class="px-4 py-2 bg-gray-900 text-white rounded-r-lg hover:bg-gray-800">Subscribe</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- Testimonials -->
-  <section class="max-w-7xl mx-auto p-6">
-    <h2 class="text-2xl font-bold mb-6 text-gray-800">What Our Customers Say</h2>
-    <div class="grid md:grid-cols-3 gap-6">
-      <div class="bg-white shadow rounded-lg p-6 text-center">
-        <p class="text-gray-600">"Great quality products and fast delivery. Highly recommended!"</p>
-        <h4 class="mt-4 font-bold">- Ayesha</h4>
-      </div>
-      <div class="bg-white shadow rounded-lg p-6 text-center">
-        <p class="text-gray-600">"Customer service is excellent, and I love the discounts."</p>
-        <h4 class="mt-4 font-bold">- Ahmed</h4>
-      </div>
-      <div class="bg-white shadow rounded-lg p-6 text-center">
-        <p class="text-gray-600">"Wide variety of products, all genuine and affordable."</p>
-        <h4 class="mt-4 font-bold">- Sara</h4>
-      </div>
-    </div>
+  <!-- All Products -->
+  <section id="products" class="max-w-7xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-6 text-gray-800">All Products</h2>
+    <div id="productsGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
   </section>
 
   <!-- Footer -->
@@ -196,26 +179,22 @@
         </div>
       </div>
     </div>
-    <div class="text-center text-gray-500 text-sm mt-6">
-      &copy; 2025 ShopEase. All rights reserved.
-    </div>
+    <div class="text-center text-gray-500 text-sm mt-6">&copy; 2025 ShopEase. All rights reserved.</div>
   </footer>
 
-  <!-- Slider Script -->
+  <!-- Scripts -->
   <script>
+    // Slider
     const slider = document.getElementById("slider");
     const slides = document.querySelectorAll(".slide");
     let index = 1;
     const slideWidth = 100;
-
     slider.style.transform = `translateX(-${index * slideWidth}%)`;
-
     function showSlide() {
       index++;
       slider.style.transition = "transform 0.7s ease-in-out";
       slider.style.transform = `translateX(-${index * slideWidth}%)`;
-
-      if (index === slides.length - 1) {
+      if(index === slides.length - 1){
         setTimeout(() => {
           slider.style.transition = "none";
           index = 1;
@@ -223,8 +202,70 @@
         }, 700);
       }
     }
-
     setInterval(showSlide, 3000);
+
+    // Products array
+    const products = [
+      { name: "Smartphone", price: "Rs 45,000", img: "https://picsum.photos/id/1011/400/300", link: "product.html" },
+      { name: "Laptop", price: "Rs 85,000", img: "https://picsum.photos/id/1012/400/300", link: "product.html" },
+      { name: "Headphones", price: "Rs 15,000", img: "https://picsum.photos/id/1013/400/300", link: "product.html" },
+      { name: "Smartwatch", price: "Rs 25,000", img: "https://picsum.photos/id/1014/400/300", link: "product.html" }
+    ];
+
+    const productsGrid = document.getElementById("productsGrid");
+    const heroSlider = document.getElementById("heroSlider");
+    const categoriesSection = document.getElementById("categoriesSection");
+    const searchInput = document.getElementById("searchInput");
+
+    function normalize(str){
+      return str.trim().toLowerCase().replace(/s$/,"");
+    }
+
+    function renderProducts(filterTerm = "") {
+      const term = normalize(filterTerm);
+      productsGrid.innerHTML = "";
+      const matchedProducts = products.filter(p => normalize(p.name).includes(term));
+
+      if(matchedProducts.length === 0) {
+        productsGrid.innerHTML = `<p class="col-span-full text-center text-gray-500">No products found.</p>`;
+      }
+
+      matchedProducts.forEach(p => {
+        const card = document.createElement("div");
+        card.className = "product-card bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center";
+        card.innerHTML = `
+          <a href="${p.link}">
+            <img src="${p.img}" alt="${p.name}" class="w-full h-56 object-contain">
+            <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">${p.name}</h3>
+          </a>
+          <p class="text-blue-600 font-bold mt-2">${p.price}</p>
+          <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Add to Cart</button>
+        `;
+        productsGrid.appendChild(card);
+      });
+
+      if(term !== "") {
+        heroSlider.style.display = "none";
+        categoriesSection.style.display = "none";
+      } else {
+        heroSlider.style.display = "";
+        categoriesSection.style.display = "";
+      }
+    }
+
+    renderProducts();
+
+    searchInput.addEventListener("input", () => {
+      renderProducts(searchInput.value);
+      if(searchInput.value.trim() !== "") {
+        document.getElementById("products").scrollIntoView({ behavior: "smooth" });
+      }
+    });
+
+    document.getElementById("searchBtn").addEventListener("click", () => {
+      renderProducts(searchInput.value);
+      document.getElementById("products").scrollIntoView({ behavior: "smooth" });
+    });
   </script>
 
 </body>
