--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ShopEase</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -270,3 +274,271 @@
 
 </body>
 </html>
+  <title>ShopEase</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Slider styles */
+    .slider {
+      display: flex;
+      transition: transform 0.7s ease-in-out;
+    }
+    .slide {
+      width: 100%;
+      flex-shrink: 0;
+      position: relative;
+      height: 400px;
+    }
+    .slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+    .slide-text {
+      position: absolute;
+      top: 50%;
+      left: 10%;
+      transform: translateY(-50%);
+      color: white;
+      text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
+    }
+  </style>
+</head>
+<body class="bg-gray-100">
+
+  <!-- Navbar -->
+  <nav class="bg-white shadow p-4 flex justify-between items-center relative sticky top-0 z-50">
+    <h1 class="text-2xl font-bold text-blue-600">ShopEase</h1>
+
+    <!-- Links -->
+    <div class="hidden md:flex space-x-6">
+      <a href="index.html" class="text-blue-600 font-bold">Home</a>
+      <a href="shop.html" class="text-gray-700 hover:text-blue-600 font-medium">Shop</a>
+      <a href="about.html" class="text-gray-700 hover:text-blue-600 font-medium">About</a>
+      <a href="contact.html" class="text-gray-700 hover:text-blue-600 font-medium">Contact</a>
+
+      <!-- Categories Dropdown -->
+      <div class="relative group">
+        <button class="font-medium text-gray-700 hover:text-blue-600 flex items-center">
+          Categories
+          <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+          </svg>
+        </button>
+        <div class="absolute hidden group-hover:block bg-white shadow-lg rounded-lg mt-0 top-full left-0 w-48 z-20">
+          <a href="smartphones.html" class="block px-4 py-2 hover:bg-gray-100">Smartphones</a>
+          <a href="laptops.html" class="block px-4 py-2 hover:bg-gray-100">Laptops</a>
+          <a href="headphones.html" class="block px-4 py-2 hover:bg-gray-100">Headphones</a>
+          <a href="smartwatches.html" class="block px-4 py-2 hover:bg-gray-100">Smartwatches</a>
+          <a href="accessories.html" class="block px-4 py-2 hover:bg-gray-100">Accessories</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Search + Cart -->
+    <div class="flex items-center space-x-2">
+      <div class="hidden md:flex">
+        <input id="searchInput" type="text" placeholder="Search..." class="px-3 py-2 rounded-l-lg border border-gray-300 focus:ring focus:ring-blue-200">
+        <button id="searchBtn" class="px-4 py-2 bg-blue-600 text-white rounded-r-lg hover:bg-blue-700">
+          Search
+        </button>
+      </div>
+      <button onclick="window.location.href='cart.html'" class="flex items-center px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5m1.6 8l-2 9m13-9l2 9M9 21a1 1 0 100-2 1 1 0 000 2zm8 0a1 1 0 100-2 1 1 0 000 2z" />
+        </svg>
+        Cart (0)
+      </button>
+    </div>
+  </nav>
+
+  <!-- Hero Slider -->
+  <div id="heroSlider" class="relative w-full overflow-hidden h-96">
+    <div id="slider" class="slider">
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1593642532400-2682810df593?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Smartphones">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">Latest Smartphones</h2>
+          <p class="text-lg mb-4">Grab the newest models at unbeatable prices!</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1517336714731-489689fd1ca8?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Laptops">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">High-End Laptops</h2>
+          <p class="text-lg mb-4">Powerful performance for work and gaming</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1593696120645-b1f3c37bb81f?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Headphones">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">Stylish Headphones</h2>
+          <p class="text-lg mb-4">Experience immersive sound quality</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+      <div class="slide">
+        <img src="https://images.unsplash.com/photo-1523473827530-1228b6ed8d36?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1200" alt="Smartwatches">
+        <div class="slide-text">
+          <h2 class="text-3xl font-bold mb-2">Smartwatches</h2>
+          <p class="text-lg mb-4">Track your fitness with style</p>
+          <button onclick="window.location.href='shop.html#products'" class="px-6 py-2 bg-blue-600 hover:bg-blue-700 text-white font-semibold rounded-lg transition">
+            Shop Now
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Featured Categories -->
+  <section id="categoriesSection" class="max-w-7xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-6 text-gray-800">Featured Categories</h2>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+      <a href="smartphones.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1011/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Smartphones</h3>
+      </a>
+      <a href="laptops.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1012/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Laptops</h3>
+      </a>
+      <a href="headphones.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1013/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Headphones</h3>
+      </a>
+      <a href="smartwatches.html" class="bg-white shadow rounded-lg p-6 text-center hover:shadow-lg transition">
+        <img src="https://picsum.photos/id/1014/200/150" class="mx-auto mb-4" alt="">
+        <h3 class="font-medium">Smartwatches</h3>
+      </a>
+    </div>
+  </section>
+
+  <!-- All Products -->
+  <section id="products" class="max-w-7xl mx-auto p-6">
+    <h2 class="text-2xl font-bold mb-6 text-gray-800">All Products</h2>
+    <div id="productsGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-white shadow mt-10 py-8">
+    <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-6 text-center md:text-left text-gray-600">
+      <div>
+        <h3 class="font-bold mb-2">ShopEase</h3>
+        <p>Your one-stop online store for all electronics.</p>
+      </div>
+      <div>
+        <h3 class="font-bold mb-2">Quick Links</h3>
+        <ul>
+          <li><a href="shop.html" class="hover:text-blue-600">Shop</a></li>
+          <li><a href="about.html" class="hover:text-blue-600">About</a></li>
+          <li><a href="contact.html" class="hover:text-blue-600">Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold mb-2">Follow Us</h3>
+        <div class="flex justify-center md:justify-start space-x-4">
+          <a href="#" class="hover:text-blue-600">Facebook</a>
+          <a href="#" class="hover:text-blue-600">Instagram</a>
+          <a href="#" class="hover:text-blue-600">Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div class="text-center text-gray-500 text-sm mt-6">&copy; 2025 ShopEase. All rights reserved.</div>
+  </footer>
+
+  <!-- Scripts -->
+  <script>
+    // Slider
+    const slider = document.getElementById("slider");
+    const slides = document.querySelectorAll(".slide");
+    let index = 1;
+    const slideWidth = 100;
+    slider.style.transform = `translateX(-${index * slideWidth}%)`;
+    function showSlide() {
+      index++;
+      slider.style.transition = "transform 0.7s ease-in-out";
+      slider.style.transform = `translateX(-${index * slideWidth}%)`;
+      if(index === slides.length - 1){
+        setTimeout(() => {
+          slider.style.transition = "none";
+          index = 1;
+          slider.style.transform = `translateX(-${index * slideWidth}%)`;
+        }, 700);
+      }
+    }
+    setInterval(showSlide, 3000);
+
+    // Products array
+    const products = [
+      { name: "Smartphone", price: "Rs 45,000", img: "https://picsum.photos/id/1011/400/300", link: "product.html" },
+      { name: "Laptop", price: "Rs 85,000", img: "https://picsum.photos/id/1012/400/300", link: "product.html" },
+      { name: "Headphones", price: "Rs 15,000", img: "https://picsum.photos/id/1013/400/300", link: "product.html" },
+      { name: "Smartwatch", price: "Rs 25,000", img: "https://picsum.photos/id/1014/400/300", link: "product.html" }
+    ];
+
+    const productsGrid = document.getElementById("productsGrid");
+    const heroSlider = document.getElementById("heroSlider");
+    const categoriesSection = document.getElementById("categoriesSection");
+    const searchInput = document.getElementById("searchInput");
+
+    function normalize(str){
+      return str.trim().toLowerCase().replace(/s$/,"");
+    }
+
+    function renderProducts(filterTerm = "") {
+      const term = normalize(filterTerm);
+      productsGrid.innerHTML = "";
+      const matchedProducts = products.filter(p => normalize(p.name).includes(term));
+
+      if(matchedProducts.length === 0) {
+        productsGrid.innerHTML = `<p class="col-span-full text-center text-gray-500">No products found.</p>`;
+      }
+
+      matchedProducts.forEach(p => {
+        const card = document.createElement("div");
+        card.className = "product-card bg-white rounded-xl shadow hover:shadow-lg transition p-4 flex flex-col items-center text-center";
+        card.innerHTML = `
+          <a href="${p.link}">
+            <img src="${p.img}" alt="${p.name}" class="w-full h-56 object-contain">
+            <h3 class="mt-4 text-lg font-medium text-gray-800 hover:text-blue-600">${p.name}</h3>
+          </a>
+          <p class="text-blue-600 font-bold mt-2">${p.price}</p>
+          <button onclick="window.location.href='cart.html'" class="mt-4 w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Add to Cart</button>
+        `;
+        productsGrid.appendChild(card);
+      });
+
+      if(term !== "") {
+        heroSlider.style.display = "none";
+        categoriesSection.style.display = "none";
+      } else {
+        heroSlider.style.display = "";
+        categoriesSection.style.display = "";
+      }
+    }
+
+    renderProducts();
+
+    searchInput.addEventListener("input", () => {
+      renderProducts(searchInput.value);
+      if(searchInput.value.trim() !== "") {
+        document.getElementById("products").scrollIntoView({ behavior: "smooth" });
+      }
+    });
+
+    document.getElementById("searchBtn").addEventListener("click", () => {
+      renderProducts(searchInput.value);
+      document.getElementById("products").scrollIntoView({ behavior: "smooth" });
+    });
+  </script>
+
+</body>
+</html>
+
